prevent images from overflowing out of the div

--- a/blog/static/blog/viewpost.css
+++ b/blog/static/blog/viewpost.css
@@ -21,12 +21,19 @@
     background-color: white;
 }
 
+
 .post-container{
     border-style: solid;
     border-color: lightgray;
     border-width: 1px;
     border-radius: 5px;
-    padding: 0px 10px 0px 10px;
+    padding: 0px 10px 10px 10px;
+    overflow:hidden;
+}
+
+.post-container img {
+    max-width:100%; 
+    max-height: 100%;
 }
 
 .editbutton{
